# custom_turtlebot_nav_ws

./: CLAUDE.md  README.md
docs/: setup_new_robot.md  troubleshooting.md
docs/plans/: 2026-04-08-multi-machine-deployment.md
docs/specs/: 2026-04-08-multi-machine-deployment-design.md
scripts/: check_network.sh  fastdds_discovery_server.service  fastdds_qos_override.xml  install_description_override.sh  install_discovery_server.sh  setup_robot.sh  setup_workstation.sh  smoke_test.sh
src/custom_tb4_autonomy/: package.xml  setup.cfg  setup.py
src/custom_tb4_autonomy/config/: waypoints.yaml
src/custom_tb4_autonomy/custom_tb4_autonomy/: nav_goal_sender.py  object_detector_node.py  patrol_node.py  tb4_teleop.py  tf_broadcaster.py
src/custom_tb4_bringup/: CMakeLists.txt  package.xml
src/custom_tb4_bringup/config/: camera_calibration.yaml  default.rviz
src/custom_tb4_bringup/launch/: full_system.launch.py  nav.launch.py  robot_camera.launch.py  robot_full.launch.py  robot_nav.launch.py  robot_rplidar.launch.py  robot_sensors.launch.py  robot_slam.launch.py  slam.launch.py  workstation_full.launch.py  workstation_ml.launch.py  workstation_viz.launch.py
src/custom_tb4_description/: CMakeLists.txt  package.xml
src/custom_tb4_description/launch/: description.launch.py
src/custom_tb4_description/urdf/: custom_extras.urdf.xacro  custom_robot.urdf.xacro
