<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_tb4_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configs for custom TurtleBot4 (Create3 + RPLIDAR + USB camera)</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>custom_tb4_description</exec_depend>
  <exec_depend>custom_tb4_autonomy</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
