<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_tb4_description</name>
  <version>1.0.0</version>
  <description>Custom URDF for TurtleBot4 with RPLIDAR and USB camera mounted on bare Create3</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>turtlebot4_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
